# EA_GLASS

./: .gitignore  README.md  pyproject.toml
spin/spin/: .gitignore  AGENTS.md  LICENSE  MILESTONES.md  PERFORMANCE.md  README.md  SCALABILITY.md  requirements-dev.txt
spin/spin/docs/: POPULATION_ANNEALING.md  ising_analytics.md  replica_scaling_discovery.md  spin_glass_analytics.md
spin/spin/examples/: benchmark.py  ea_observables.py  ising.py  population_annealing_example.py  sk_glass.py  tsp.py  wegner.py
spin/spin/src/spin_engine/: README.md
spin/spin/src/spin_engine/dynamics/: __init__.py  base.py  metropolis_hastings.py  population_annealing.py  tracker.py  traveling_salesman.py
spin/spin/src/spin_engine/interactions/: __init__.py  base.py  standard.py
spin/spin/src/spin_engine/measurements/: __init__.py  base.py  correlations.py  gauge.py  scalars.py
spin/spin/src/spin_engine/models/: __init__.py  base.py  edwards_anderson.py  ising.py  sk.py  spherical.py  traveling_salesman.py  wegner.py
spin/spin/tests/: test_delta_energy.py  test_dynamics.py  test_edwards_anderson.py  test_interactions.py  test_measurements.py  test_models.py  test_population_annealing.py  test_sk.py  test_spin_glass_measurements.py  test_tracker.py
spin/spin/tests/cross_checking/: legacy_core.py  test_dynamics_cross_check.py  test_measurements_cross_check.py
spin/spin/tests/traveling_salesman/: test_tsp_dynamics.py  test_tsp_measurement.py  test_tsp_model.py
